# be-silver-bullet

./: README.md
fastapi-poc/: pyproject.toml
fastapi-poc/fastapi_poc/: main.py
fastapi-poc/fastapi_poc/config/: database.py
fastapi-poc/fastapi_poc/models/: movie.py
fastapi-poc/fastapi_poc/newdirectory/: archivo.py
prueba/: pyproject.toml
