[tool.poetry]
name = "fastapi-poc"
version = "0.1.0"
description = ""
authors = ["oscar-cortez-home <oscarkortez@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
pydantic = "^2.1.1"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
