[tool.poetry]
name = "prueba"
version = "0.1.0"
description = ""
authors = ["oscar-cortez-home <oscarkortez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
